--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,8 @@ html {
   line-height: 1; }
 
 ol, ul {
-  list-style: none; }
+  list-style: none;
+text-decoration: none; }
 
 table {
   border-collapse: collapse;
