--- a/views/checkins.html
+++ b/views/checkins.html
@@ -4,7 +4,7 @@
     novalidate>
 
     <div class="textintro">
-      <h1>Check-in</h1>
+      <h1>Check-in now</h1>
       <p>Fill out this form to check-in to this meeting</p>
       <p class="message" ng-show="message">{{ message }}</p>
     </div>
