--- a/views/nav.html
+++ b/views/nav.html
@@ -2,6 +2,6 @@
   <ul>
     <li><a ng-show="currentUser" ng-href="#/meetings">Meetings
       <span ng-show="howManyMeetings" class="badge">{{howManyMeetings}}</span></a></li>
-    <li><a ng-hide="currentUser" ng-href="#/login">Login</a></li>
+    <li><a ng-hide="currentUser" ng-href="#/login">Login Now</a></li>
     <li><a ng-hide="currentUser" ng-href="#/register">Register</a></li>
   </ul>
