--- a/views/login.html
+++ b/views/login.html
@@ -5,7 +5,7 @@
 
     <div class="textintro">
       <h1>Hi there!</h1>
-      <p>Log-in to access the awesomeness!</p>
+      <p>Log-in now to access the awesomeness!</p>
       <p class="message" 
         ng-show="message"> {{ message }}</p>
     </div>
